--- a/PaymentKiosk/PaymentKiosk/MainWindow.xaml
+++ b/PaymentKiosk/PaymentKiosk/MainWindow.xaml
@@ -5,27 +5,27 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PaymentKiosk"
         mc:Ignorable="d"
-        Title="MainWindow" Height="650" Width="525">
+        Title="MainWindow" Height="450" Width="525">
     <Grid>
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="150" VerticalAlignment="Top" Width="518" Background="#FFBFBABA" Margin="0,38,0,0"/>
 
-        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="218" Margin="0,234,0,0" VerticalAlignment="Top" Width="518" Background="#FFBFBABA"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="160" VerticalAlignment="Top" Width="518" Background="#FFBFBABA" Margin="0,23,0,0"/>
 
-        <Button x:Name="button" Content="Charge Amount" HorizontalAlignment="Left" Margin="104,501,0,0" VerticalAlignment="Top" Width="291" Height="48" Click="button_Click" Background="#FFBFBABA"/>
-        <Label x:Name="label" Content="Customer Information" HorizontalAlignment="Left" Margin="21,14,0,0" VerticalAlignment="Top" Height="29" Width="291"/>
-        <Label x:Name="label1" Content="Customer Name :" HorizontalAlignment="Left" Margin="129,69,0,0" VerticalAlignment="Top" Width="101"/>
-        <TextBox x:Name="textBoxCustomerName" HorizontalAlignment="Left" Height="26" Margin="228,67,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="218"/>
-        <TextBox x:Name="textBoxCustomerPhone" HorizontalAlignment="Left" Height="26" Margin="228,134,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="218"/>
-        <Label x:Name="label2" Content="Customer Telephone :" HorizontalAlignment="Left" Margin="103,138,0,0" VerticalAlignment="Top" Width="128"/>
-        <Label x:Name="label3" Content="Payment Information" HorizontalAlignment="Left" Margin="14,212,0,0" VerticalAlignment="Top" Width="291"/>
-        <Label x:Name="label4" Content="Charged Amount :" HorizontalAlignment="Left" Margin="124,266,0,0" VerticalAlignment="Top" Width="111"/>
-        <TextBox x:Name="textBoxAmount" HorizontalAlignment="Left" Height="23" Margin="228,264,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="218"/>
-        <Label x:Name="label5" Content="Credit Card Number :" HorizontalAlignment="Left" Margin="109,332,0,0" VerticalAlignment="Top" Width="130"/>
-        <TextBox x:Name="textBoxCreditCard" HorizontalAlignment="Left" Height="25" Margin="228,330,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="218"/>
-        <Label x:Name="label6" Content="Exp. Date :" HorizontalAlignment="Left" Margin="61,395,0,0" VerticalAlignment="Top" Width="69"/>
-        <TextBox x:Name="textBoxExpireyDate" HorizontalAlignment="Left" Height="23" Margin="124,393,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="100"/>
-        <Label x:Name="label7" Content="Security Code :" HorizontalAlignment="Left" Margin="286,397,0,0" VerticalAlignment="Top" Width="96"/>
-        <TextBox x:Name="textBoxSecurityCode" HorizontalAlignment="Left" Height="26" Margin="373,393,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="97"/>
+        <Border BorderBrush="Black" BorderThickness="1" HorizontalAlignment="Left" Height="116" Margin="0,227,0,0" VerticalAlignment="Top" Width="518" Background="#FFBFBABA"/>
+
+        <Button x:Name="button" Content="Charge Amount" HorizontalAlignment="Left" Margin="106,357,0,0" VerticalAlignment="Top" Width="291" Height="48" Click="button_Click" Background="#FFBFBABA" FontWeight="Bold" FontSize="14.667"/>
+        <Label x:Name="label1" Content="Name :" HorizontalAlignment="Left" Margin="95,39,0,0" VerticalAlignment="Top" Width="49"/>
+        <TextBox x:Name="textBoxCustomerName" HorizontalAlignment="Left" Height="26" Margin="145,39,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="324"/>
+        <TextBox x:Name="textBoxCustomerPhone" HorizontalAlignment="Left" Height="26" Margin="145,89,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="324"/>
+        <Label x:Name="label2" Content="Telephone :" HorizontalAlignment="Left" Margin="71,89,0,0" VerticalAlignment="Top" Width="73"/>
+        <Label x:Name="label3" Content="Payment Information" HorizontalAlignment="Left" Margin="14,205,0,0" VerticalAlignment="Top" Width="291"/>
+        <Label x:Name="label4" Content="Item Cost :" HorizontalAlignment="Left" Margin="73,139,0,0" VerticalAlignment="Top" Width="71"/>
+        <TextBox x:Name="textBoxAmount" HorizontalAlignment="Left" Height="27" Margin="145,138,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="324"/>
+        <Label x:Name="label5" Content="Credit Card Number :" HorizontalAlignment="Left" Margin="14,241,0,0" VerticalAlignment="Top" Width="130"/>
+        <TextBox x:Name="textBoxCreditCard" HorizontalAlignment="Left" Height="25" Margin="145,241,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="324"/>
+        <Label x:Name="label6" Content="Exp. Date :" HorizontalAlignment="Left" Margin="71,290,0,0" VerticalAlignment="Top" Width="69"/>
+        <TextBox x:Name="textBoxExpireyDate" HorizontalAlignment="Left" Height="23" Margin="145,292,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="100"/>
+        <Label x:Name="label7" Content="Security Code :" HorizontalAlignment="Left" Margin="271,291,0,0" VerticalAlignment="Top" Width="96"/>
+        <TextBox x:Name="textBoxSecurityCode" HorizontalAlignment="Left" Height="23" Margin="372,292,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="97"/>
 
     </Grid>
 </Window>
